@@ -8,6 +8,7 @@ Revision history for Dancer-Template-Handlebars
  [DOCUMENTATION]
 
  [ENHANCEMENTS]
+ - Now support layouts!
 
  [NEW FEATURES]
 
